# mt5700webui-openwrt-server

./: .gitignore
at-webserver/: Cargo.toml  Makefile
at-webserver/files/etc/config/: at-webserver
at-webserver/files/etc/init.d/: at-webserver
at-webserver/src/: client.rs  config.rs  connection.rs  main.rs  models.rs  notifications.rs
luci-app-at-webserver/htdocs/luci-static/resources/view/at-webserver/: config.js
